--- a/api/client/src/components/postDetail/postDetail.css
+++ b/api/client/src/components/postDetail/postDetail.css
@@ -127,6 +127,7 @@
 
 @media screen and (max-width: 480px) {
   .pd {
+    width: 100%;
     margin-top: 0;
     margin-right: 0;
   }
@@ -147,6 +148,7 @@
   .pd-title {
     text-align: left;
     font-size: 24px;
+    margin-top: 60px;
   }
 
   .pd-edit {
